--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,4 +16,8 @@
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+
+  <a class="blog" href="/blog">
+      <span class="site-blog">블로그</span><i class="icon fa fa-chevron-right" aria-hidden="true"></i>
+  </a>
 </div>
