--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,18 +6,15 @@
         </h1>
         <div class="header-icons">
             <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-            <a aria-label="My LinkedIn" target="_blank" href="{{site.linked_username}}"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-            <a aria-label="My Google Plus" target="_blank" href="{{site.gplus_username}}"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
-            <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
-        </div>
-        <div class="header-links">
-            <a class="link" href="#about" data-scroll>About Me</a>
-            <a class="link" href="#projects" data-scroll>Projects</a>
+            <a aria-label="My LinkedIn" target="_blank" href="{{site.linked_username}}"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
+            <a aria-label="My Google Plus" target="_blank" href="{{site.gplus_username}}"><i class="icon fab fa-google-plus" aria-hidden="true"></i></a>
+            <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fab fa-github" aria-hidden="true"></i></a>
         </div>
     </div>
+    <div class="links">
+        <a class="link" href="#about" data-scroll>기술</a>
+        <a class="link" href="#companyProjects" data-scroll>프로젝트</a>
+    </div>
     <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
-
-    <a class="blog" href="/blog">
-        <i class="icon fa fa-chevron-right" aria-hidden="true"></i><span class="site-blog"><b>BLOG</b></span>
-    </a>
+    <a class="blog" href="/blog"><span class="site-blog"><b>블로그</b></span><i class="icon fa fa-chevron-right" aria-hidden="true"></i></a>
 </div>
